--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    }
+  }
   "AllowedHosts": "*"
 }
